(fixes 75) remove unnecessary z-index declarations, simplify modal hiding logic, and update zipCode in state whenever component updates

--- a/src/components/ZipCodeModal.css
+++ b/src/components/ZipCodeModal.css
@@ -1,6 +1,6 @@
 .zipcode-modal {
   position: fixed; /* Stay in place */
-  z-index: 20; /* Sit on top of the Nav */
+  z-index: 20; /* Sit on top of the Nav
   padding-top: 100px; /* Location of the box */
   padding-bottom: 100px; /* Location of the box */
   left: 0;
@@ -13,9 +13,6 @@
   color: #031927;
   font-family: Raleway, Arial, sans-serif;
   text-shadow: none;
-}
-.zipcode-modal-display-none {
-  display: none;
 }
 
 .zipcode-modal-content {
